--- a/public/partials/main.html
+++ b/public/partials/main.html
@@ -6,11 +6,11 @@
         <form name="queryForm" ng-model="queryData" ng-submit="query()">
             <section class="input-group mb5">
                 <span class="input-group-addon">开始日期</span>
-                <input type="date" class="form-control flat-input" ng-model="queryData.startDate"/>
+                <input type="date" class="form-control flat-input" ng-model="queryData.startDate" required/>
             </section>
             <section class="input-group mb5">
                 <span class="input-group-addon">结束日期</span>
-                <input type="date" class="form-control flat-input" ng-model="queryData.endDate"/>
+                <input type="date" class="form-control flat-input" ng-model="queryData.endDate" required/>
             </section>
             <section class="input-group mb5">
                 <input type="text" class="form-control flat-input input-lg mb5" name="phoneOrName"
