--- a/public/CheckPointNotice/partials/statusList.html
+++ b/public/CheckPointNotice/partials/statusList.html
@@ -6,7 +6,7 @@
                 <div class="input-group">
                     <input class="form-control" type="text" ng-model="filterText" placeholder="车牌,手机号..."/>
                     <span class="input-group-btn">
-                        <button class="btn">
+                        <button class="btn btn-default">
                             <span class="glyphicon " ng-class="{'glyphicon-search':!filterApplied,'glyphicon-remove':filterApplied}"></span>
                         </button>
                 </span>
