--- a/public/B2B2C/css/common.css
+++ b/public/B2B2C/css/common.css
@@ -1,566 +1,484 @@
-/*
- * project common style
- * 
- */
-/*
-  TODO List: 
-  重构css
-*/
-/* variable */
-/*color style*/
-/*鲜艳系列*/
-/*优雅系列*/
-/*炫酷系列*/
-/*common style color*/
-/*leftmune color*/
-/*text color*/
-/*header color*/
-/*table style color*/
-/* reset */
-/**
- *  @Wrapper.less
- *  version 1.0
- *  desc: Use for custom-info directive
- *  copyright @ guangzhouhaiguang
- *  @zxxxj
- */
 body {
-  font-family: Helvetica Neue, Microsoft Yahei !important;
-  background-color: #EEE;
+    font-family: Helvetica Neue, Microsoft Yahei !important;
+    background-color: #EEE;
 }
-.input-append,
-.input-prepend {
-  margin-bottom: 0px;
+
+input[type="date"], input[type="datetime"], input[type="time"] {
+    line-height: 20px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
-#indexBody {
-  background-color: #364150;
-}
-/* 通用样式 */
-.clear {
-  clear: both;
-  line-height: 0;
-}
-.fl {
-  float: left !important;
-}
-.fr {
-  float: right !important;
-}
+
 a {
-  color: #4482c2;
+    color: #4482c2;
 }
+
 a:hover {
-  color: #d51e56;
-  text-decoration: none;
+    color: #d51e56;
+    text-decoration: none;
 }
+
 .link-black a {
-  color: #666 !important;
+    color: #666 !important;
 }
+
 .link-black a:hover {
-  color: #4482c2 !important;
+    color: #4482c2 !important;
 }
+
 .no-under-text a {
-  text-decoration: none;
+    text-decoration: none;
 }
-/**/
-.page-left {
-  width: 14.6666%;
-  position: absolute;
-  left: 0px;
-}
-.page-main-container {
-  margin-left: 14.6666%;
-  overflow-x: hidden;
-  background-color: #EEE;
-  position: relative;
-}
-.leftmenu-closed {
-  overflow: visible;
-}
-.leftmenu-closed .page-left {
-  width: 42px;
-}
-.leftmenu-closed .page-main-container {
-  margin-left: 42px;
-}
-.close-leftmenu-btn {
-  color: #999;
-  position: absolute;
-  left: 10px;
-  top: 10px;
-  cursor: default;
-}
-.close-leftmenu-btn:hover {
-  color: #CCC;
-}
-.divider {
-  border-bottom: 1px solid #EEE;
-}
-/* common components */
-/*
- * project leftmenu stylesheet
- *
- */
-.leftmenu {
-  margin-top: 40px;
-}
-.leftmenu .menu-icon {
-  font-size: 16px;
-  color: #ffffff;
-  display: block;
-  width: 42px;
-  height: 36px;
-  line-height: 36px;
-  padding-left: 10px;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-.leftmenu ul {
-  list-style: none;
-  margin: 0px;
-}
-.leftmenu ul a {
-  text-decoration: none;
-}
-.leftmenu #menu-collapse div {
-  _zoom: 1;
-}
-.leftmenu #menu-collapse div a {
-  display: block;
-}
-.leftmenu #menu-collapse div a:hover {
-  text-decoration: none;
-}
-.leftmenu #menu-collapse .menu-item {
-  position: relative;
-  background-color: #364150;
-}
-.leftmenu #menu-collapse .menu-item .menu-title {
-  padding: 8px 0px 8px 35px;
-  color: #ffffff;
-}
-.leftmenu #menu-collapse .menu-item:hover {
-  background-color: #222222;
-}
-.leftmenu #menu-collapse .menu-item:hover a {
-  color: #ffffff;
-}
-.leftmenu #menu-collapse .menu-item.active .menu-title {
-  background-color: #1caf9a !important;
-  border-bottom: 1px solid #1caf9a !important;
-}
-.leftmenu #menu-collapse .menu-item.active .menu-icon,
-.leftmenu #menu-collapse .menu-item.active .menu-title {
-  color: #ffffff;
-  font-weight: bold;
-}
-.leftmenu #menu-collapse .menu-item:active {
-  background-color: #151515 !important;
-}
-.leftmenu #menu-collapse .level-second {
-  margin-left: 0px;
-  margin-right: 0px;
-  *margin-top: 0px;
-  -webkit-box-shadow: 12px 12px 12px rgba(0, 0, 0, 0.1);
-  box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.1);
-}
-.leftmenu #menu-collapse .level-second .item {
-  _zoom: 1;
-}
-.leftmenu #menu-collapse .level-second .item a {
-  padding: 8px 10px 8px 33px;
-  background-color: #ffffff;
-  color: #666666;
-  font-size: 12px;
-}
-.leftmenu #menu-collapse .level-second .item a:hover {
-  background-color: #f7f7f7;
-}
-.leftmenu #menu-collapse .level-second .item:hover a {
-  background-color: #f2f2f2;
-}
-.leftmenu #menu-collapse .level-second .item.active a {
-  background-color: #ededed;
-}
-.leftmenu-closed .leftmenu .menu-item {
-  height: 36px;
-}
-.leftmenu-closed .leftmenu .menu-item .menu-title {
-  top: -36px;
-  padding: 8px 10px !important;
-  background-color: #f3f3f3 !important;
-  color: #222 !important;
-  font-weight: bold;
-}
-.leftmenu-closed .leftmenu .menu-item .menu-title .btn-pushpin {
-  position: absolute;
-  right: 8px;
-  top: 10px;
-}
-.leftmenu-closed .leftmenu .menu-item .title {
-  display: none;
-}
-.leftmenu-closed .leftmenu .level-second {
-  display: none;
-  top: 0px;
-}
-.leftmenu-closed .leftmenu .level-second .item a {
-  padding: 8px 10px !important;
-  background-color: #FFF;
-}
-.leftmenu-closed .leftmenu .menu-title,
-.leftmenu-closed .leftmenu .level-second {
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  -ms-transition: all 0.2s ease-in-out;
-  -o-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-  position: absolute;
-  width: 176px;
-  left: 42px;
-  background-color: #FFF;
-}
-.leftmenu-closed .leftmenu .menu-item:hover,
-.leftmenu-closed .leftmenu .pinMenu {
-  display: block;
-  z-index: 999;
-}
-.leftmenu-closed .leftmenu .menu-item:hover .menu-icon,
-.leftmenu-closed .leftmenu .pinMenu .menu-icon {
-  color: #666 !important;
-  background-color: #FFF;
-}
-.leftmenu-closed .leftmenu .menu-item:hover .title,
-.leftmenu-closed .leftmenu .pinMenu .title {
-  display: inline;
-}
-.leftmenu-closed .leftmenu .menu-item:hover .level-second,
-.leftmenu-closed .leftmenu .pinMenu .level-second {
-  display: block !important;
-}
-.leftmenu-closed .leftmenu .menu-item.active .menu-title {
-  color: #FFF !important;
-  background-color: #1caf9a !important;
-  border-bottom: 1px solid #1caf9a !important;
-}
-.leftmenu-closed .leftmenu .menu-item.active .menu-icon {
-  color: #666 !important;
-  background-color: #EEE;
-}
-/*
- * gjs project header stylesheet
- *
- */
-.logo {
-  background-color: #ffffff;
-  color: #333;
-}
-.header {
-  background-color: #ffffff;
-  width: 100%;
-  /*-webkit-box-shadow: 0 0 2px 0 rgba(0,0,0,0.5);
-  box-shadow: 0 0 2px 0 rgba(0,0,0,0.5);*/
-}
-/* detail style */
-/*extend layout*/
+
 .pl5 {
-  padding-left: 5px;
+    padding-left: 5px;
 }
+
 .pl10 {
-  padding-left: 10px;
+    padding-left: 10px;
 }
+
 .pl15 {
-  padding-left: 15px;
+    padding-left: 15px;
 }
+
 .pl20 {
-  padding-left: 20px;
+    padding-left: 20px;
 }
+
 .pb5 {
-  padding-bottom: 5px;
+    padding-bottom: 5px;
 }
+
 .pb10 {
-  padding-bottom: 10px;
+    padding-bottom: 10px;
 }
+
 .pb15 {
-  padding-bottom: 15px;
+    padding-bottom: 15px;
 }
+
 .pb20 {
-  padding-bottom: 20px;
+    padding-bottom: 20px;
 }
+
 .pr5 {
-  padding-right: 5px;
+    padding-right: 5px;
 }
+
 .pr10 {
-  padding-right: 10px;
+    padding-right: 10px;
 }
+
 .pr15 {
-  padding-right: 15px;
+    padding-right: 15px;
 }
+
 .pr20 {
-  padding-right: 20px;
+    padding-right: 20px;
 }
+
 .pt5 {
-  padding-top: 5px;
+    padding-top: 5px;
 }
+
 .pt10 {
-  padding-top: 10px;
+    padding-top: 10px;
 }
+
 .pt15 {
-  padding-top: 15px;
+    padding-top: 15px;
 }
+
 .pt20 {
-  padding-top: 20px;
+    padding-top: 20px;
 }
+
 .p5 {
-  padding: 5px;
+    padding: 5px;
 }
+
 .ps5 {
-  padding: 0 5px;
+    padding: 0 5px;
 }
+
 .ps10 {
-  padding: 0 10px;
+    padding: 0 10px;
 }
+
 .ps15 {
-  padding: 0 15px;
+    padding: 0 15px;
 }
+
 .ps20 {
-  padding: 0 20px;
+    padding: 0 20px;
 }
+
 .pu5 {
-  padding: 5px 0;
+    padding: 5px 0;
 }
+
 .pu10 {
-  padding: 10px 0;
+    padding: 10px 0;
 }
+
 .pu15 {
-  padding: 15px 0;
+    padding: 15px 0;
 }
+
 .pu20 {
-  padding: 20px 0;
+    padding: 20px 0;
 }
+
 .p10 {
-  padding: 10px;
+    padding: 10px;
 }
+
 .p15 {
-  padding: 15px;
+    padding: 15px;
 }
+
 .p20 {
-  padding: 20px;
+    padding: 20px;
 }
+
 .mt5 {
-  margin-top: 5px;
+    margin-top: 5px;
 }
+
 .mt10 {
-  margin-top: 10px;
+    margin-top: 10px;
 }
+
 .mt15 {
-  margin-top: 15px;
+    margin-top: 15px;
 }
+
 .mt20 {
-  margin-top: 20px;
+    margin-top: 20px;
 }
+
 .mr5 {
-  margin-right: 5px;
+    margin-right: 5px;
 }
+
 .mr10 {
-  margin-right: 10px;
+    margin-right: 10px;
 }
+
 .mr15 {
-  margin-right: 15px;
+    margin-right: 15px;
 }
+
 .mr20 {
-  margin-right: 20px;
+    margin-right: 20px;
 }
+
 .mb5 {
-  margin-bottom: 5px;
+    margin-bottom: 5px;
 }
+
 .mb10 {
-  margin-bottom: 10px;
+    margin-bottom: 10px;
 }
+
 .mb15 {
-  margin-bottom: 15px;
+    margin-bottom: 15px;
 }
+
 .mb20 {
-  margin-bottom: 20px;
+    margin-bottom: 20px;
 }
+
 .ml5 {
-  margin-left: 5px;
+    margin-left: 5px;
 }
+
 .ml10 {
-  margin-left: 10px;
+    margin-left: 10px;
 }
+
 .ml15 {
-  margin-left: 15px;
+    margin-left: 15px;
 }
+
 .ml20 {
-  margin-left: 20px;
+    margin-left: 20px;
 }
+
 .ms5 {
-  margin: 0 5px;
+    margin: 0 5px;
 }
+
 .ms10 {
-  margin: 0 10px;
+    margin: 0 10px;
 }
+
 .ms15 {
-  margin: 0 15px;
+    margin: 0 15px;
 }
+
 .ms20 {
-  margin: 0 20px;
+    margin: 0 20px;
 }
+
 .mu5 {
-  margin: 5px 0;
+    margin: 5px 0;
 }
+
 .mu10 {
-  margin: 10px 0;
+    margin: 10px 0;
 }
+
 .mu15 {
-  margin: 15px 0;
+    margin: 15px 0;
 }
+
 .mu20 {
-  margin: 20px 0;
+    margin: 20px 0;
 }
+
 .malign {
-  margin-left: auto;
-  margin-right: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 .width10 {
-  width: 10%;
+    width: 10%;
 }
+
 .width20 {
-  width: 20%;
+    width: 20%;
 }
+
 .width30 {
-  width: 30%;
+    width: 30%;
 }
+
 .width40 {
-  width: 40%;
+    width: 40%;
 }
+
 .width40 {
-  width: 50%;
+    width: 50%;
 }
+
 .width60 {
-  width: 60%;
+    width: 60%;
 }
+
 .width70 {
-  width: 70%;
+    width: 70%;
 }
+
 .width80 {
-  width: 80%;
+    width: 80%;
 }
+
 .width90 {
-  width: 90%;
+    width: 90%;
 }
+
 .width100 {
-  width: 100%;
+    width: 100%;
 }
-/*Scroll style for IE*/
-/**,html,body,div,section,article,video,span,a,p,ul,li{
-    scrollbar-face-color:#DDD;
-    scrollbar-highlight-color:#DDD;
-    scrollbar-shadow-color:#DDD;
-    scrollbar-3dlight-color:#FFF;
-    scrollbar-arrow-color:#FFF;
-    scrollbar-darkshadow-color:#FFF;
-    scrollbar-track-color:#FFF;
-    scrollbar-base-color:#CCC;
-}*/
-/*Scroll style for -webkit-*/
-::-webkit-scrollbar {
-  width: 8px;
-  height: 10px;
-  color: #000;
+
+.card {
+    background-color: #FFF;
+    margin: 0px 0 10px 0;
+    border-radius: 2px;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.0470588) 0 2px 3px 0;
+    box-shadow: rgba(0, 0, 0, 0.0470588) 0 2px 3px 0;
 }
-::-webkit-scrollbar-track {
-  background-color: #CCC;
+
+.card .title-actived {
+    border-color: #4482c2 !important;
+    color: #4482c2 !important;
 }
-::-webkit-scrollbar-thumb {
-  border-radius: 0px;
-  background-color: #BBB;
+
+.card-header .card-title {
+    border-bottom: 1px solid #DDD;
 }
-::-webkit-scrollbar-thumb:hover {
-  background-color: #AAA;
+
+.card-header .card-title .action-btn {
+    margin: 12px 5px 10px 0;
+    color: #666;
 }
-::-webkit-scrollbar-thumb:active {
-  background-color: #364150;
+
+.card-header .card-title h1,
+.card-header .card-title h2,
+.card-header .card-title h3,
+.card-header .card-title h4,
+.card-header .card-title h4,
+.card-header .card-title h6 {
+    padding: 10px 10px;
+    float: left;
+    color: #666;
+    margin-top: 5px;
+    margin-bottom: 0px;
 }
-/*Scroll Module End*/
-.flat-input,
-.form-control {
-  border: 2px solid #DDD;
-  color: #34495e;
-  text-indent: 1px;
-  padding-left: 3px;
-  padding-right: 3px;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
+
+.card-header .card-title:after,
+.card-header .card-title:before {
+    display: table;
+    content: " ";
 }
-.flat-input.no-border,
-.form-control.no-border {
-  border: 2px solid #FFF;
+
+.card-header .card-title:after {
+    clear: both;
 }
-.flat-input:hover,
-.form-control:hover {
-  border: 2px solid #CCC;
+
+.card-content {
+    overflow-y: auto;
 }
-.flat-input:focus,
-.form-control:focus {
-  border-color: #4482c2;
-  outline: 0;
-  -webkit-box-shadow: none;
-  box-shadow: none;
+
+.list-group,
+.list-group ul {
+    list-style: none;
+    padding: 0px;
 }
-textarea {
-  overflow: hidden;
-  width: 300px;
-  min-height: 30px;
-  resize: vertical;
-  padding: 0;
-  margin: 0;
-  word-break: break-all;
-  white-space: pre-wrap;
+
+.list-group {
+    margin: 0px 0px 10px 0px;
 }
-.flex-text-wrap {
-  font-size: 16px;
-  font-weight: bold;
-  background-color: transparent;
-  outline: 0 none;
-  color: #383838;
-  word-wrap: break-word;
-  margin: 0;
-  border: none;
-  padding: 0;
+
+.list-group .list-item {
+    border-left: 3px solid transparent;
+    padding-left: 10px;
+    position: relative;
+    line-height: 32px;
+    border-bottom: 1px solid #EEE;
 }
-.flex-text-wrap div {
-  visibility: hidden;
-  padding: 0;
-  width: 100%;
-  min-height: 30px;
-  margin: 0;
-  word-break: break-all;
-  white-space: pre-wrap;
+
+.list-group .list-item input[type="checkbox"] {
+    margin-top: 9px;
 }
-.flex-text-wrap textarea {
-  border: 2px solid transparent;
-  padding: 3px;
-  margin: 0;
-  word-break: break-all;
-  white-space: pre-wrap;
-  overflow: hidden;
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  resize: none;
-  line-height: 20px;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  font-size: 16px;
-  font-weight: bold;
-  background-color: transparent;
-  outline: 0 none;
-  color: #383838;
-  word-wrap: break-word;
+
+.list-group .item-title {
+    margin-bottom: 0px;
+    display: block;
+    color: #666;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    border-right: 5px solid transparent;
 }
+
+.list-group .item-title span {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.list-group .item-title.active {
+    background-color: #f3f3f3;
+}
+
+.list-group .list-item.active .item-title {
+    color: #000;
+}
+
+.list-group .list-item.selected {
+    border-left: 3px solid #1caf9a;
+}
+
+.list-group .sub-item li {
+    line-height: 30px;
+}
+
+.list-group .sub-item li a {
+    color: #666;
+}
+
+.list-group .sub-item li a:hover {
+    color: #d51e56;
+}
+
+.list-group .task-title,
+.list-group li {
+    position: relative;
+}
+
+.list-group.light-list-magenta .list-item.active {
+    margin-left: -3px;
+    border-left: 3px solid #df386f;
+}
+
+.list-group.light-list .list-item.active {
+    border-left: 3px solid #df386f;
+    color: #df386f;
+    background-color: #f3f3f3;
+}
+
+.list-group.light-list .list-item:hover {
+    color: #1caf9a;
+    background-color: #f3f3f3;
+    text-decoration: none;
+}
+
+.loader {
+    font-size: 20px;
+    margin: 5em auto;
+    width: 1em;
+    height: 1em;
+    border-radius: 50%;
+    position: relative;
+    text-indent: -9999em;
+    -webkit-animation: load4 1.3s infinite linear;
+    animation: load4 1.3s infinite linear;
+}
+
+@-webkit-keyframes load4 {
+    0%,
+    100% {
+        box-shadow: 0em -3em 0em 0.2em #dddddd, 2em -2em 0 0em #dddddd, 3em 0em 0 -0.5em #dddddd, 2em 2em 0 -0.5em #dddddd, 0em 3em 0 -0.5em #dddddd, -2em 2em 0 -0.5em #dddddd, -3em 0em 0 -0.5em #dddddd, -2em -2em 0 0em #dddddd;
+    }
+    12.5% {
+        box-shadow: 0em -3em 0em 0em #dddddd, 2em -2em 0 0.2em #dddddd, 3em 0em 0 0em #dddddd, 2em 2em 0 -0.5em #dddddd, 0em 3em 0 -0.5em #dddddd, -2em 2em 0 -0.5em #dddddd, -3em 0em 0 -0.5em #dddddd, -2em -2em 0 -0.5em #dddddd;
+    }
+    25% {
+        box-shadow: 0em -3em 0em -0.5em #dddddd, 2em -2em 0 0em #dddddd, 3em 0em 0 0.2em #dddddd, 2em 2em 0 0em #dddddd, 0em 3em 0 -0.5em #dddddd, -2em 2em 0 -0.5em #dddddd, -3em 0em 0 -0.5em #dddddd, -2em -2em 0 -0.5em #dddddd;
+    }
+    37.5% {
+        box-shadow: 0em -3em 0em -0.5em #dddddd, 2em -2em 0 -0.5em #dddddd, 3em 0em 0 0em #dddddd, 2em 2em 0 0.2em #dddddd, 0em 3em 0 0em #dddddd, -2em 2em 0 -0.5em #dddddd, -3em 0em 0 -0.5em #dddddd, -2em -2em 0 -0.5em #dddddd;
+    }
+    50% {
+        box-shadow: 0em -3em 0em -0.5em #dddddd, 2em -2em 0 -0.5em #dddddd, 3em 0em 0 -0.5em #dddddd, 2em 2em 0 0em #dddddd, 0em 3em 0 0.2em #dddddd, -2em 2em 0 0em #dddddd, -3em 0em 0 -0.5em #dddddd, -2em -2em 0 -0.5em #dddddd;
+    }
+    62.5% {
+        box-shadow: 0em -3em 0em -0.5em #dddddd, 2em -2em 0 -0.5em #dddddd, 3em 0em 0 -0.5em #dddddd, 2em 2em 0 -0.5em #dddddd, 0em 3em 0 0em #dddddd, -2em 2em 0 0.2em #dddddd, -3em 0em 0 0em #dddddd, -2em -2em 0 -0.5em #dddddd;
+    }
+    75% {
+        box-shadow: 0em -3em 0em -0.5em #dddddd, 2em -2em 0 -0.5em #dddddd, 3em 0em 0 -0.5em #dddddd, 2em 2em 0 -0.5em #dddddd, 0em 3em 0 -0.5em #dddddd, -2em 2em 0 0em #dddddd, -3em 0em 0 0.2em #dddddd, -2em -2em 0 0em #dddddd;
+    }
+    87.5% {
+        box-shadow: 0em -3em 0em 0em #dddddd, 2em -2em 0 -0.5em #dddddd, 3em 0em 0 -0.5em #dddddd, 2em 2em 0 -0.5em #dddddd, 0em 3em 0 -0.5em #dddddd, -2em 2em 0 0em #dddddd, -3em 0em 0 0em #dddddd, -2em -2em 0 0.2em #dddddd;
+    }
+}
+
+@keyframes load4 {
+    0%,
+    100% {
+        box-shadow: 0em -3em 0em 0.2em #dddddd, 2em -2em 0 0em #dddddd, 3em 0em 0 -0.5em #dddddd, 2em 2em 0 -0.5em #dddddd, 0em 3em 0 -0.5em #dddddd, -2em 2em 0 -0.5em #dddddd, -3em 0em 0 -0.5em #dddddd, -2em -2em 0 0em #dddddd;
+    }
+    12.5% {
+        box-shadow: 0em -3em 0em 0em #dddddd, 2em -2em 0 0.2em #dddddd, 3em 0em 0 0em #dddddd, 2em 2em 0 -0.5em #dddddd, 0em 3em 0 -0.5em #dddddd, -2em 2em 0 -0.5em #dddddd, -3em 0em 0 -0.5em #dddddd, -2em -2em 0 -0.5em #dddddd;
+    }
+    25% {
+        box-shadow: 0em -3em 0em -0.5em #dddddd, 2em -2em 0 0em #dddddd, 3em 0em 0 0.2em #dddddd, 2em 2em 0 0em #dddddd, 0em 3em 0 -0.5em #dddddd, -2em 2em 0 -0.5em #dddddd, -3em 0em 0 -0.5em #dddddd, -2em -2em 0 -0.5em #dddddd;
+    }
+    37.5% {
+        box-shadow: 0em -3em 0em -0.5em #dddddd, 2em -2em 0 -0.5em #dddddd, 3em 0em 0 0em #dddddd, 2em 2em 0 0.2em #dddddd, 0em 3em 0 0em #dddddd, -2em 2em 0 -0.5em #dddddd, -3em 0em 0 -0.5em #dddddd, -2em -2em 0 -0.5em #dddddd;
+    }
+    50% {
+        box-shadow: 0em -3em 0em -0.5em #dddddd, 2em -2em 0 -0.5em #dddddd, 3em 0em 0 -0.5em #dddddd, 2em 2em 0 0em #dddddd, 0em 3em 0 0.2em #dddddd, -2em 2em 0 0em #dddddd, -3em 0em 0 -0.5em #dddddd, -2em -2em 0 -0.5em #dddddd;
+    }
+    62.5% {
+        box-shadow: 0em -3em 0em -0.5em #dddddd, 2em -2em 0 -0.5em #dddddd, 3em 0em 0 -0.5em #dddddd, 2em 2em 0 -0.5em #dddddd, 0em 3em 0 0em #dddddd, -2em 2em 0 0.2em #dddddd, -3em 0em 0 0em #dddddd, -2em -2em 0 -0.5em #dddddd;
+    }
+    75% {
+        box-shadow: 0em -3em 0em -0.5em #dddddd, 2em -2em 0 -0.5em #dddddd, 3em 0em 0 -0.5em #dddddd, 2em 2em 0 -0.5em #dddddd, 0em 3em 0 -0.5em #dddddd, -2em 2em 0 0em #dddddd, -3em 0em 0 0.2em #dddddd, -2em -2em 0 0em #dddddd;
+    }
+    87.5% {
+        box-shadow: 0em -3em 0em 0em #dddddd, 2em -2em 0 -0.5em #dddddd, 3em 0em 0 -0.5em #dddddd, 2em 2em 0 -0.5em #dddddd, 0em 3em 0 -0.5em #dddddd, -2em 2em 0 0em #dddddd, -3em 0em 0 0em #dddddd, -2em -2em 0 0.2em #dddddd;
+    }
+}
+
