fixed navigate bar

--- a/public/B2B2C/partials/main.html
+++ b/public/B2B2C/partials/main.html
@@ -45,7 +45,7 @@
             <ul class="nav nav-tabs width100" id="navigate" ng-class="{'navbar-fixed-top':fixedTop}">
                 <li ng-repeat="item in NavObj"
                     ng-click="ChangeList(item.Value)"
-                    ng-class="{'active':ActivedValue==item.Value}">
+                    ng-class="{'active':ActivatedValue==item.Value}">
                     <a href="" style="font-size: 16px;padding: 10px 30px;">{{item.DisplayName}}</a>
                 </li>
             </ul>
