--- a/public/B2B2C/partials/main.html
+++ b/public/B2B2C/partials/main.html
@@ -1,5 +1,5 @@
 <style>
-    .navFixedOffset{
+    .navFixedOffset {
         margin-top: 50px;
     }
 </style>
@@ -34,8 +34,45 @@
         </form>
     </section>
 </section>
-<div class="result" ng-show="showList">
-    <section class="card">
+<div class="result" ng-show="showList" accordion close-others="true">
+    <section class="card" ng-repeat="item in resultDataList"
+             accordion-group heading="税单号&nbsp;{{item.tax_bill_id}}" sub-heading="{{item.date_of_issue | date:'yyyy-MM-dd'}}">
+        <!--<section class="card-header">
+            <div class="card-title">
+                <h4><strong class="text-primary">税单号&nbsp;{{item.tax_bill_id}}</strong></h4>
+                <div class="ps10">
+                    &lt;!&ndash;<span class="glyphicon glyphicon-time text-muted mr5"></span>&ndash;&gt;
+                    <span class="text-muted">{{item.date_of_issue | date:'yyyy-MM-dd'}}</span></div>
+            </div>
+        </section>-->
+        <section class="card-content">
+            <div class="list-group">
+                <div class="clearfix list-item" ng-repeat="order in item.orders">
+                    <h4 class="text-danger">
+                        {{order.receiver_name}}
+                    </h4>
+                    <div>
+                        <span class="glyphicon glyphicon-list-alt text-muted mr5"></span>
+                        <span class="text-muted">订单号：{{order.order_id}}</span>
+                    </div>
+                    <div>
+                        <span class="glyphicon glyphicon-stats text-muted mr5"></span>
+                        <span class="text-muted">状态：{{order.status}}</span>
+                    </div>
+                    <div ng-hide="item.rateable_total==0">
+                        <span class="glyphicon glyphicon-credit-card text-muted mr5"></span>
+                        <span class="text-muted">货运号：{{order.freight_id}}</span>
+                    </div>
+                    <div>
+                        <span class="glyphicon glyphicon-time text-muted mr5"></span>
+                        <span class="text-muted">最后更新日期：{{order.last_updated | date:'yyyy-MM-dd'}}</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </section>
+
+    <!--<section class="card">
         <section class="card-header">
             <div class="card-title">
                 <h4>查询结果</h4>
@@ -65,7 +102,7 @@
 
                     <div>
                         <span class="glyphicon glyphicon-pencil text-muted mr5"></span>
-                        <span class="text-muted mr10">个人税单号：{{item.tax_number}}</span>
+                        <span class="text-muted mr10">个人税单号：{{item.tax_bill_id}}</span>
                     </div>
                     <div>
                         <span class="glyphicon glyphicon-list-alt text-muted mr5"></span>
@@ -86,7 +123,7 @@
                 </div>
             </div>
         </section>
-    </section>
+    </section>-->
 </div>
 <article>
     <p class="p10 text-muted"><span class="glyphicon glyphicon-heart-empty mr5"></span>
