modified:   public/B2B2C/js/common/app.js 	modified:   public/B2B2C/partials/main.html

--- a/public/B2B2C/partials/main.html
+++ b/public/B2B2C/partials/main.html
@@ -36,7 +36,7 @@
 </section>
 <div class="result" ng-show="showList" accordion close-others="false">
     <section class="card" ng-repeat="item in resultDataList"
-             ng-init="!!item.tax_bill_id?item.status.open=false:item.status.open=true"
+             ng-init="item.status.open=true"
              accordion-group is-open="item.status.open">
         <header accordion-heading>
             税单号&nbsp;{{!!item.tax_bill_id?item.tax_bill_id:'无'}}
