--- a/public/B2B2C/partials/main.html
+++ b/public/B2B2C/partials/main.html
@@ -21,8 +21,8 @@
                 <input type="text" class="form-control flat-input input-lg mb5" name="phoneOrName"
                        ng-class="{'input-err':(queryForm.phoneOrName.$dirty&&queryForm.$invalid)}"
                        ng-model="queryData.phoneOrName" ng-maxlength="18"
-                       ng-pattern="/^[^`~!@#$%^&*()+=|\\\][\]\{\}:;'\,.<>/?]{1}[^`~!@$%^&()+=|\\\][\]\{\}:;'\,.<>?]{0,19}$/"
-                       placeholder="请输入身份证号或姓名" required/>
+                       ng-pattern="/^[0-9]{0,19}$/"
+                       placeholder="请输入身份证号" required/>
                 <span class="input-group-btn">
                     <input class="btn btn-primary width100 input-lg" type="submit" value="查询"
                            ng-disabled="queryForm.$invalid"/>
@@ -35,6 +35,12 @@
     </section>
 </section>
 <div class="result" ng-show="showList" accordion close-others="false">
+    <div class="p10" ng-hide="resultDataList.length>0">
+        <div class="loader" ng-show="ListDataStatus=='loading'"></div>
+        <div ng-show="ListDataStatus=='none'">
+            <h5 class="text-muted">暂无数据</h5>
+        </div>
+    </div>
     <section class="card" ng-repeat="item in resultDataList"
              ng-init="item.status.open=true"
              accordion-group is-open="item.status.open">
@@ -45,7 +51,7 @@
         </header>
         <div class="list-group">
             <div class="toolbar p10" style="border-bottom: 1px solid #DDD;background-color: #f7f7f7;">
-                征税额：{{item.tax_total}}
+                征税额：￥{{item.tax_total}}
             </div>
             <div class="clearfix list-item p15" ng-repeat="order in item.orders">
                 <div>
@@ -54,7 +60,7 @@
                 </div>
                 <div>
                     <span class="glyphicon glyphicon-stats text-muted mr5"></span>
-                    <span class="text-muted">状态：{{order.status}}</span>
+                    <span class="text-muted">状态：<strong class="text-info">{{order.status}}</strong></span>
                 </div>
                 <div ng-hide="item.rateable_total==0">
                     <span class="glyphicon glyphicon-credit-card text-muted mr5"></span>
