Updated display texts

--- a/public/B2B2C/partials/main.html
+++ b/public/B2B2C/partials/main.html
@@ -68,7 +68,7 @@
                 </div>
                 <div>
                     <span class="glyphicon glyphicon-time text-muted mr5"></span>
-                    <span class="text-muted">最后更新日期：{{order.last_updated | date:'yyyy-MM-dd'}}</span>
+                    <span class="text-muted">最新处理时间：{{order.last_updated | date:'yyyy-MM-dd'}}</span>
                 </div>
             </div>
         </div>
