--- a/public/B2B2C/partials/desktop_main.html
+++ b/public/B2B2C/partials/desktop_main.html
@@ -38,6 +38,7 @@
 </form>
 </div>
 </div>
+
 <div class="desktop-result">
 	<div class="content">
 		<table class="table table-bordered result-table">
@@ -64,8 +65,15 @@
 			</tbody>
 		</table>
 	</div>
+	<div class="content" ng-show="loadStatus == 'none'">
+		<span>没有找到数据</span>
+	</div>
+	<div class="content" ng-if="loadStatus == 'loading'">
+		<div spinner="cube"></div>
+	</div>
 </div>
 <div class="desktop-footer">
-	
+	 <p class="p10">
+    本服务由广州海关12360提供，仅供查询在广州海关通关的跨境个人税单。</p>
 </div>
 </div>
