Fixed footer height

--- a/public/B2B2C/partials/desktop_main.html
+++ b/public/B2B2C/partials/desktop_main.html
@@ -40,7 +40,7 @@
 </div>
 
 <div class="desktop-result">
-	<div class="content">
+	<div class="content" ng-show="loadStatus == 'done'">
 		<table class="table table-bordered result-table">
 			<thead>
 				<tr>
@@ -73,7 +73,7 @@
 	</div>
 </div>
 <div class="desktop-footer">
-	 <p class="p10">
+	 <p class="">
     本服务由广州海关12360提供，仅供查询在广州海关通关的跨境个人税单。</p>
 </div>
 </div>
