Use service provider

--- a/public/partials/mobile_main.html
+++ b/public/partials/mobile_main.html
@@ -4,7 +4,7 @@
     }
 </style>
 <div>
-    <img src="images/bg.gif" class="img-responsive" alt=""/>
+    <img src="images/12360banner.png" class="img-responsive" alt=""/>
 </div>
 <div class="card">
     <div class="card-content p10">
